# relativistic_circuit_locality

./: .gitignore  CHAT.md  IMPROVEMENTS.md  README.md  pyproject.toml  sitecustomize.py
docs/: API_SURFACE.md  MODEL_SCOPE.md
relativistic_circuit_locality/: __init__.py
src/relativistic_circuit_locality/: __init__.py  benchmarking.py  core.py  demo.py  experimental.py  experiments.py  geometry.py  lebedev_tables.py  scalar_field.py
src/relativistic_circuit_locality/data/: lebedev_tables.json
src/relativistic_circuit_locality/examples/: __init__.py  __main__.py  _shared.py  core_phases.py  field_sampling.py  research.py
tests/: _shared.py  test_core_locality.py  test_entanglement_diagnostics.py  test_experiments.py  test_extended_limitations.py  test_fundamental_limitations.py  test_numerical_algorithms.py  test_pde_lattice.py  test_physical_fidelity.py  test_scalar_field.py  test_tooling_and_data.py
