[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relativistic-circuit-locality"
version = "0.1.0"
description = "Reference implementation of the core scalar-field locality constructions from arXiv:2305.05645."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
