[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relativistic-circuit-locality"
version = "0.1.0"
description = "Reference implementation of the core scalar-field locality constructions from arXiv:2305.05645."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18",
    "ruff>=0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
relativistic_circuit_locality = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
